dockerdesktop/ingress/ingress-router.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /echo1
            pathType: Prefix
            backend:
              service:
                name: echoserver1
                port:
                  number: 80
          - path: /echo2
            pathType: Prefix
            backend:
              service:
                name: echoserver2
                port:
                  number: 80
